fixed our css after browsers have, you know, evolved...

--- a/index.html
+++ b/index.html
@@ -8,32 +8,21 @@
 		<link href="3column.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
-		<div class="colmask blogstyle">
-			<div class="colmid">
-				<div class="colleft">
-					<div class="col1">
-						<image src="images/wegoto12_logo.png"/>
-					</div>
-				</div>
-				<div class="col2">
-					<p>We do some fun things with technology. We enjoy working with early stage startups to do things that
-					people said were impossible, crazy, or would upset the status-quo. We know that technology changes
-					fast and that new ideas can be hard to accept. We know that software can make life easier for regular
-					people when it is done right.</p>
-					<p><a href="mailto:info@wegoto12.com">Find out</a> what we can do for you.</p>
-				</div>
-				<div class="col3">
-					<a href="http://www.engineyard.com/partners"><img src="http://assets.engineyard.com/images/ey_partner_associate.png" alt="Engine Yard"></a>
-				</div>
-			</div>
-		</div>
-		<div id="footer">
-			<p>
-				<a href="mailto:info@wegoto12.com">info@wegoto12.com</a>
-				<br/>
-				+1.650.492.5121 or +44.020.7193.4561
-			</p>
-		</div>
+    <div class='wrapper'>
+  		<div class="colleft">
+  			<image src="images/wegoto12_logo.png"/>
+  		</div>
+  		<div class='colright'>
+  			<p>We do some fun things with technology. We enjoy working with early stage startups to do things that
+  			people said were impossible, crazy, or would upset the status-quo. We know that technology changes
+  			fast and that new ideas can be hard to accept. We know that software can make life easier for regular
+  			people when it is done right.</p>
+  			<p><a href="mailto:info@wegoto12.com">Find out</a> what we can do for you.</p>
+  		</div>
+  	</div>
+		<div id='footer'>
+  			<a href="http://www.engineyard.com/partners"><img src="http://assets.engineyard.com/images/ey_partner_associate.png" alt="Engine Yard"></a>
+	  </div>
 
 <script type="text/javascript">
  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); 
