make the text justified to clean up the look a little.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="We Go To 12. A technology consulting company that specializes in rapid prototyping software, hardware, and companies." />
 		<meta name="keywords" content="Ruby on Rails, Java, iPhone, Cloud, Amazon EC2, Start-up, consulting, rapid prototype, software, Arduino, web application" />
     <title>we go to 12</title>
-		<link href="3column.css" media="screen" rel="stylesheet" type="text/css" />
+		<link href="site.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class='wrapper'>
