--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="We Go To 12. A technology consulting company that specializes in rapid prototyping software, hardware, and companies." />
-		<meta name="keywords" content="Ruby on Rails, Java, iPhone, Cloud, Amazon EC2, Start-up, consulting, rapid prototype, software, Arduino, web application" />
-    <title>we go to 12</title>
-		<link href="site.css" media="screen" rel="stylesheet" type="text/css" />
+    	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="We Go To 12. A technology consulting company that specializes in rapid prototyping software, hardware, and companies." />
+    	<title>we go to 12</title>
+	<link href="site.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class='wrapper'>
-  		<div class="colleft">
-  			<image src="images/wegoto12_logo.png"/>
-  		</div>
-  		<div class='colright'>
-  			<p>We do some fun things with technology. We enjoy working with early stage startups to do things that
-  			people said were impossible, crazy, or would upset the status-quo. We know that technology changes
-  			fast and that new ideas can be hard to accept. We know that software can make life easier for regular
-  			people when it is done right.</p>
-  			<p><a href="mailto:info@wegoto12.com">Find out</a> what we can do for you.</p>
-  		</div>
+  	<div class="colleft">
+  		<image src="images/wegoto12_logo.png"/>
   	</div>
-		<div id='footer'>
-  			<a href="http://www.engineyard.com/partners"><img src="http://assets.engineyard.com/images/ey_partner_associate.png" alt="Engine Yard"></a>
-	  </div>
+  	<div class='colright'>
+  		<p>We do some fun things with technology. We know that technology changes fast
+  		and that new ideas can be hard to accept. We know that software can make life
+  		easier for regular people when it is done right.</p>
+  		<p><a href="mailto:info@wegoto12.com">Find out</a> what we can do for you.</p>
+  	</div>
+  </div>
 
 <script type="text/javascript">
  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); 
